# datacom

./: .gitignore  Nettverksprog rapport.docx  README.md
oving1/: CMakeLists.txt  findprime.cpp  findprime.hpp  main.cpp  test.cpp
oving3/: CMakeLists.txt  mathclient.cpp  mathserver.cpp  web.cpp
oving4/: CMakeLists.txt  mathclient.cpp  mathserver.cpp
oving4/java_ssl_example/src/javasslclient/: JavaSSLClient.java
oving4/java_ssl_example/src/javasslserver/: JavaSSLServer.java
oving5/: CMakeLists.txt  account.hpp  account_4.hpp  oppgave1.txt  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp
oving6/: CMakeLists.txt  main.cpp  testscript.html
oving7/: .babelrc  index.js  message.txt  package.json  pub.pem  sig.txt  verify.js
oving7/public/: index.html
oving7/sslcert/: server.cnf  server.crt  server.key
